# xcp

./: .gitignore  .gitmodules  Makefile  README-iso.md  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/actions/uv-setup/: action.yml
.github/workflows/: check.yml  cleanup-ghcr-org.yml  code-checkers.yml  release.yml  requirements-check.yml  zizmor.yml
create-install-image/: .gitignore  README.md
create-install-image/configs/8.2.testing/: packages.lst  yum.conf.tmpl  yumdl.conf.tmpl
create-install-image/configs/8.3/: yum.conf.tmpl
create-install-image/configs/8.3.0/: yum.conf.tmpl  yumdl.conf.tmpl
create-install-image/configs/8.3.testing/: packages.lst  yum-repos.conf.tmpl
create-install-image/configs/8.3.updates/: yum-repos.conf.tmpl  yum.conf.tmpl
create-install-image/configs/base/: CUSTOMREPO.tmpl  yum-repos.conf.tmpl
create-install-image/configs/candidates/: INCLUDE  yum-repos.conf.tmpl
create-install-image/configs/ci/: yum-repos.conf.tmpl
create-install-image/configs/incoming/: yum-repos.conf.tmpl
create-install-image/configs/testing/: INCLUDE  yum-repos.conf.tmpl
create-install-image/configs/updates/: yum-repos.conf.tmpl
create-install-image/mock-configs/: 8.2.testing-x86_64.cfg  8.2.updates-x86_64.cfg  8.3.0-x86_64.cfg  8.3.testing-x86_64.cfg  8.3.updates-x86_64.cfg  logging.ini
create-install-image/scripts/: create-install-iso.sh  create-installimg.sh  mirror-repos.sh
create-install-image/scripts/lib/: misc.sh
create-install-image/templates/installimg/: 8.2.testing
create-install-image/tests/: 0000-sanity.t  0100-8.2-updates.t  0101-8.2-testing.t  0200-8.3-base.t  0202-8.3-testing.t  Makefile
data/: centos_rpm_sourcerpm-2019-02-11.txt  epel_rpm_sourcerpm-2019-02-11.txt  epel_rpm_sourcerpm-2019-05-06.txt  epel_rpm_sourcerpm-2021-03-18.txt  epel_rpm_sourcerpm-2021-05-03.txt  epel_rpm_sourcerpm-2021-08-09.txt
data/7.6/: centos_rpm_sourcerpm-2018-09-12.txt  comparison-XS7.5-XS7.6.txt
data/8.0/: comparison-XS7.6-CH8.0.txt  packages_provenance.csv
data/8.1/: comparison-CH8.0-CH8.1.txt  packages_provenance.csv
data/8.2/: comparison-CH8.1-CH8.2.txt  comparison-CH8.2-CH8.2.1-SRPMs.txt  comparison-CH8.2-CH8.2.1.txt  packages_provenance.csv
data/8.3/: comparison-CH8.2.1-CH8.3preview-RPMs.txt  comparison-CH8.2.1-CH8.3preview-SRPMs.txt  packages_provenance.csv
iso/: README.md
iso/7.4/: .treeinfo  README.md  groups.xml
iso/7.5/: .treeinfo  EULA  groups-XS.xml  groups.xml
iso/7.6/: .treeinfo  README.md  groups-XS.xml  groups.xml
iso/7.6/install/: EULA
iso/8.0/: .treeinfo  LICENSES  groups-XS.xml  groups.xml
iso/8.1/: .treeinfo  groups-XS.xml  groups.xml
iso/8.2/: README.md  groups-XS.xml
iso/8.2.0/: .treeinfo
iso/8.2.1/: .treeinfo
iso/8.3/: .treeinfo
iso/8.3.0/: comps-XS.xml
misc/: ks_pledges.md  ks_project_description.md  ks_script.md
mock-configs/: 8.2.0-x86_64.cfg  8.2.1-x86_64.cfg  8.3.0-x86_64.cfg
scripts/: .gitignore  compare_packages.py  create-install-iso.sh  create-installimg.sh  create_rpm_git_repo.py  diff_rpms.sh  download_centos.py  fix-efivars.py  gen-iso.sh  get_newer_rpm_if_exists.py  git-import-srpm  git-review-rebase.py  import_srpm.py  manage-isos.sh  mirror-repos.sh  retire_rpm_git_repo.py  setup_offline_updates.sh  setup_offline_xcpng_repos  snapshot-fixer.py  terminate_idle_connections.py
scripts/amd_perf/: check_grant_table_cacheability.py
scripts/git-review-rebase/: .flake8  .gitignore  README.md  pyproject.toml
scripts/git-review-rebase/requirements/: base.txt  dev.txt  update_requirements.py
scripts/git-review-rebase/src/git_review_rebase/: __init__.py  __main__.py  app.py  blame.py  branch_range.py  cli.py  commit_matching.py  constants.py  diff_parser.py  git_utils.py
scripts/git-review-rebase/src/git_review_rebase/ui/: __init__.py  diff_table.py  filter_screen.py  rebase_table.py  search_bar.py  utils.py
scripts/iso-remaster/: README.md  iso-remaster.sh
scripts/iso-remaster/samples/: patch-installimg.sh  patch-iso.sh
scripts/koji/: .gitignore  README.md  create_user_target.py  import_rpms.py  koji_build.py  koji_garbage_collector.sh  koji_import_rpms.py  mock-chroot-cleanup  pyproject.toml  requirements.txt  setup.cfg  sync_repo_from_koji.py  untag_lone_builds.py  update_vendor_tags.py
scripts/koji/koji_utils/: koji_build.py
scripts/koji/requirements/: base.txt  dev.txt  update_requirements.py
scripts/lib/: misc.sh
scripts/misc/: import_srpm.py
scripts/pkg_in_pipe/: .gitignore  Dockerfile  README.md  pkg_in_pipe.py
scripts/plane_to_grist/: README.md  plane_to_grist.py  pyproject.toml  setup.cfg
scripts/repo_status/: .gitignore  XS8-normal-src.txt  create_rebase_cards.py  dnf  lib.py  package_status.csv  pyproject.toml  repoquery.py  rpm_dep_tree  setup.cfg  style.css  yum_repo_status
scripts/rpm_owners/: clean.py  copy_branch.py  github_code_owners.py  packages.json  rpm.csv  set_github_code_owners.py
scripts/rpmwatcher/: README.md  docker_commands.txt  package_status.csv  repoquery.py  rpm_dep_tree  rpmwatcher_extract_deps.py  rpmwatcher_extract_roles.py  rpmwatcher_format_reports.py  rpmwatcher_update.py  run.sh  style.css  sync_repos.sh  yum_repo_query  yum_repo_status
scripts/upload_bugtool/: upload_bugtool.py
srpms/7.4/xcp-ng-plymouth-theme-1.0.0-1.src/: xcp-plymouth-theme.spec
srpms/7.4/xen-4.7.4-4.1.src/: 0001-Fix-compilation-on-CentOS-7.1.patch  0001-Kconfig-add-BROKEN-config.patch  0001-efi-Workaround-page-fault-during-runtime-service.patch  0001-lib-Add-a-generic-implementation-of-current_text_add.patch  0001-libxl-Don-t-insert-PCI-device-into-xenstore-for-HVM-.patch  0001-libxl-handle-an-INVALID-domain-when-removing-a-pci-d.patch  0001-tools-livepatch-Show-the-correct-expected-state-befo.patch  0001-x86-HVM-Avoid-cache-flush-operations-during-hvm_load.patch  0001-x86-PoD-Command-line-option-to-prohibit-any-PoD-oper.patch  0001-x86-alt-Break-out-alternative-asm-into-a-separate-he.patch  0001-x86-efi-Find-memory-for-trampoline-relocation-if-nec.patch  0001-x86-hpet-Pre-cleanup.patch  0003-x86-hpet-Post-cleanup.patch  (+304 more)
(+29 files in other folders)
