[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-review-rebase"
version = "0.1.0"
description = "Interactive tool for reviewing rebased git branches"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPLv2"}
authors = [
    {name = "Quentin Casasnovas", email = "quentin.casasnovas@vates.tech"},
]
keywords = ["git", "rebase", "review", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]

dependencies = [
    "pygit2>=1.13.0",
    "textual>=7.5.0",
    "rich>=14.3.2",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black>=24.10.0",
    "ruff>=0.1.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "types-Pygments>=2.19.0",
]

[project.urls]
Homepage = "https://github.com/xcp-ng/git-review-rebase"
Repository = "https://github.com/xcp-ng/git-review-rebase"
Issues = "https://github.com/xcp-ng/git-review-rebase/issues"

[project.scripts]
git-review-rebase = "git_review_rebase.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_review_rebase"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
