[project]
name = "koji-utils"
description = "Koji utils"
readme = "README.md"
requires-python = "~=3.11"
dynamic = ["version"]
dependencies = [
  "specfile",
]

[project.scripts]
koji-build = "koji_utils.koji_build:main"

[dependency-groups]
dev = [
  "icecream",
  "mypy",
  "flake8",
  "pyright",
  "ruff",
  "typing-extensions",
]

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../.."

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
preview = true
line-length = 120
exclude = [".git"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "F",  # Pyflakes
  "I",  # isort
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
]
# don't use some of the default D and SIM rules
ignore = [
  "D100",  # undocumented-public-module
  "D101",  # undocumented-public-class
  "D102",  # undocumented-public-method
  "D103",  # undocumented-public-function
  "D104",  # undocumented-public-package
  "D105",  # undocumented-magic-method
  "D106",  # undocumented-public-nested-class
  "D107",  # undocumented-public-init
  "D203",  # incorrect-blank-line-before-class
  "D210",  # surrounding-whitespace
  "D212",  # incorrect-blank-line-before-class
  "D401",  # non-imperative-mood
  "D403",  # first-word-uncapitalized
  "SIM105",  # suppressible-exception
  "SIM108",  # if-else-block-instead-of-if-exp
]

[tool.ruff.lint.isort]
lines-after-imports = 1
